--- a/miniprogram/pages/chat/chat.wxss
+++ b/miniprogram/pages/chat/chat.wxss
@@ -4,19 +4,31 @@ page{
 }
 .container{
     height: 75%;
-    display: flex;
-    justify-content: center;
-    background-color: black;
+    position: relative;
+    flex-direction: column;
 }
 
-.content {
-    margin-top: 600rpx;
+.ai-container {
+    background-color: #ffa200;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .user-container{
     display: block;
     padding: 30rpx;
   }
+
+.ai-image {
+    width: 100%;
+    height: 100%;
+}
 
   .input-container {
       display: flex;
