--- a/miniprogram/pages/chat/chat.wxss
+++ b/miniprogram/pages/chat/chat.wxss
@@ -1,49 +1,72 @@
 /* pages/chat/chat.wxss */
-page{
+page {
     height: 100%;
 }
-.container{
-    height: 75%;
+
+.above-container {
+    height: 50%;
     position: relative;
-    flex-direction: column;
+    z-index: 0;
 }
 
-.ai-container {
-    background-color: #ffa200;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.bottom-container {
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    height: 40%;
+    transform: translateY(35%);
 }
 
-.user-container{
-    display: block;
-    padding: 30rpx;
-  }
+.ai-content {
+    left: 7%;
+    right: 7%;
+    height: 28%;
+    background-color: white;
+    position: absolute;
+    z-index: 1;
+    opacity: 75%;
+    margin-top: 80%;
+    border-radius: 20rpx;
+    border-bottom: black;
+    padding-top: 10rpx;
+    padding-bottom: 10rpx;
+    padding-left: 20rpx;
+    padding-right: 20rpx;
+}
 
 .ai-image {
     width: 100%;
-    height: 100%;
+    transform: translateY(-1%);
 }
 
-  .input-container {
-      display: flex;
-      border: 5rpx solid #face82;
-      margin-bottom: 50rpx;
-      border-radius: 10rpx;
-  }
+.input {
+    top: 7%;
+    position: absolute;
+    left: 7%;
+    right: 7%;
+    height: 28%;
+    background-color: rgba(36, 119, 249, 1);
+    position: absolute;
+    z-index: 1;
+    color: white;
+    border-radius: 20rpx;
+    padding-top: 10rpx;
+    padding-bottom: 10rpx;
+    padding-left: 20rpx;
+    padding-right: 20rpx;
+}
 
-  .input {
-    height: 68rpx;
-    padding: 0 5rpx;
-    width: 100%;
-  }
+.chat-button {
+    width:120rpx !important;
+    height: 120rpx;
+    background-color: rgba(36, 119, 249, 1);
+    border-radius: 360rpx;
+    z-index: 20;
+    margin-top: 40%;
+    align-items: center;
+    display: flex;
+}
 
-  .button-container {
-    width: 60%;
-    margin:0 auto;
-  }
+.voice-container {
+    
+}
