增加ai文本滚动能力

--- a/miniprogram/pages/chat/chat.wxml
+++ b/miniprogram/pages/chat/chat.wxml
@@ -1,7 +1,7 @@
 <!--pages/chat/chat.wxml-->
 <view class="above-container">
     <!-- 此处放置页面主要内容 -->
-    <text class="ai-content" wx:if="{{aiTextViewState}}">{{text}}</text>
+    <text class="ai-content" wx:if="{{aiTextViewState}}" selectable="true">{{text}}</text>
     <image class="ai-image" style="background-color: #000000;" mode="{{mode}}" src="{{src}}"></image>
 </view>
 <view class="bottom-container">
