--- a/miniprogram/pages/chat/chat.wxss
+++ b/miniprogram/pages/chat/chat.wxss
@@ -59,7 +59,7 @@ page {
 }
 
 .chat-button {
-    width:160rpx !important;
+    width: 160rpx !important;
     height: 160rpx;
     background-color: rgba(36, 119, 249, 1);
     border-radius: 360rpx;
@@ -102,8 +102,26 @@ page {
     margin-bottom: 20rpx;
 }
 
-.chat-button-hover-class{
+.chat-button-hover-class {
     opacity: 0.9;
     background: rgb(0, 84, 219);
     transform: scale(0.92, 0.92);
+}
+
+.siriwave {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 20;
+}
+
+.fullscreen {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(5px);
 }
