--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,3 +1,6 @@
-<view>
-    <siri-wave></siri-wave>
+<view style="text-align: center;">
+  <canvas id="c1" type="2d" style="display: inline-block; width: 300px; height: 300px;"></canvas>
+  <button bindtap="init" style="width: 300px;">init</button>
+  <button bindtap="play" style="width: 300px;">play</button>
+  <button bindtap="pause" style="width: 300px;">pause</button>
 </view>
