去除sariwave动效,增加正在阅读的文字增粗的能力

--- a/miniprogram/pages/chat/chat.wxml
+++ b/miniprogram/pages/chat/chat.wxml
@@ -1,7 +1,7 @@
 <!--pages/chat/chat.wxml-->
 <view class="above-container">
     <!-- 此处放置页面主要内容 -->
-    <text class="ai-content" wx:if="{{showAiTextView}}" selectable="true">{{aiInitText}}</text>
+    <rich-text nodes="{{aiInitText}}" class="ai-content" wx:if="{{showAiTextView}}" selectable="true"></rich-text>
     <image class="ai-image" style="background-color: #000000;" mode="widthFix" src="../../images/girl.png"></image>
 </view>
 <view class="bottom-container">
