--- a/miniprogram/pages/chat/chat.wxml
+++ b/miniprogram/pages/chat/chat.wxml
@@ -2,10 +2,13 @@
 <view class="above-container">
     <!-- 此处放置页面主要内容 -->
     <rich-text nodes="{{aiInitText}}" class="ai-content" wx:if="{{showAiTextView}}" selectable="true"></rich-text>
-    <image class="ai-image" style="background-color: #000000;" mode="widthFix" src="../../images/girl.png"></image>
+    <image class="ai-image" style="background-color: #000000;" mode="widthFix" src="../../images/girl.jpg"></image>
+    <view class="curve-anim-container" style="position:relative; z-index: 5;" hidden="{{hideVoiceCurveLine}}">
+        <curve-wave id="curve-wave-view" hidden="{{hideVoiceCurveLine}}"></curve-wave>
+    </view>
 </view>
 <view class="bottom-container">
-    <text class="input" wx:if="{{showUserTextView}}">{{userConfirmText}}</text>
+    <text class="user-text" wx:if="{{showUserTextView}}">{{userConfirmText}}</text>
     <view class="voice-container" wx:if="{{inputMode}}">
         <button :style="rippleStyle" class="chat-button" type="mini" bindtap="clickCircleVoiceButton" bindlongpress='pressLongVoiceButton' longpress-duration="300" hover-class="chat-button-hover-class" bindtouchstart="onTouchStart" bindtouchend="onTouchEnd" bindtouchmove="onTouchMoved">
             <image src="../../images/v2_rr1xa3.png" mode="aspectFit" style="transform: scale(100%);" />
@@ -13,16 +16,14 @@
         <view hidden="{{hideLongPressText}}">
             <text style="text-align: center; display: flex; justify-content: center; margin-top: 12rpx; font-size: 30rpx; color: rgba(36, 119, 249, 1);">长按说话</text>
         </view>
+        <button-wave style="top: 0; position: absolute;"></button-wave>
     </view>
-    <view class="input-container" hidden="{{inputMode}}" style="bottom:{{textContainerBottom}}px; padding-bottom:{{textContainerPaddingBotton}}rpx; background-color:{{textContainerBgColor}}">
+    <view class="input-container" hidden="{{inputMode}}" style="bottom:{{textContainerBottom}}px; padding-bottom:{{textContainerPaddingBotton}}px; background-color:{{textContainerBgColor}}">
         <view class="voice-button" bindtap="clickVoiceButton">
             <image src="../../images/v2_rr1xqf.png" style="width: 62rpx; height: 62rpx;" />
         </view>
         <input class="user-input" confirm-type="send" bindconfirm="userConfirmMessage" value='{{inputValue}}' bindinput="inputChange" adjust-position='{{false}}' bindfocus="foucus" bindblur="blur" />
     </view>
 </view>
-<view class="fullscreen" hidden="{{hideVoiceCurveLine}}">
-</view>
-<view style="position:relative;" hidden="{{hideVoiceCurveLine}}">
-    <curve-wave id="curve-wave-view" hidden="{{hideVoiceCurveLine}}"></curve-wave>
-</view>
+<view class="fullscreen" hidden="{{hideVoiceCurveLine || hideLoaddingDialog}}"></view>
+<loadding style="display: flex; justify-content: center; transform: translateY(-1000rpx);" wx:if="{{!hideLoaddingDialog}}"></loadding>
