--- a/miniprogram/pages/chat/chat.wxss
+++ b/miniprogram/pages/chat/chat.wxss
@@ -1,29 +1,28 @@
 /* pages/chat/chat.wxss */
 page {
-    height: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .above-container {
-    height: 50%;
+    height: auto;
     position: relative;
-    z-index: 0;
 }
 
 .bottom-container {
-    position: absolute;
     background-color: rgb(255, 255, 255);
     width: 100%;
-    height: 40%;
-    transform: translateY(35%);
+    flex: 1;
 }
 
 .ai-content {
     left: 7%;
     right: 7%;
     height: auto;
+    margin-top: 60%;
     background-color: white;
     position: absolute;
-    bottom: 0;
     z-index: 1;
     opacity: 75%;
     border-radius: 20rpx;
@@ -41,17 +40,21 @@ page {
     width: 100%;
 }
 
-.input {
-    top: 7%;
+.curve-anim-container {
+    transform: translateY(-150%);
+}
+
+.user-text {
     position: absolute;
     left: 7%;
     right: 7%;
-    height: 28%;
+    height: 12%;
     background-color: rgba(36, 119, 249, 1);
     position: absolute;
     z-index: 1;
     color: white;
     border-radius: 20rpx;
+    margin-top: 2%;
     padding-top: 10rpx;
     padding-bottom: 10rpx;
     padding-left: 20rpx;
@@ -63,7 +66,7 @@ page {
     height: 200rpx;
     background: linear-gradient(135deg, rgb(0,159,255) 0%, rgb(236,47,75) 100%);
     border-radius: 360rpx;
-    margin-top: 22%;
+    margin-top: 10%;
     align-items: center;
     display: flex;
 }
@@ -77,9 +80,7 @@ page {
     left: 0;
     right: 0;
     bottom: 0;
-    margin-bottom: -10rpx;
     padding-top: 30rpx;
-    padding-bottom: 150rpx;
     padding-left: 1%;
 }
 
@@ -93,12 +94,11 @@ page {
 
 .user-input {
     height: 90rpx;
-    width: 75%;
+    width: 82%;
     margin-left: 20rpx;
-    margin-right: 50rpx;
     background-color: #ffffff;
     border-radius: 8rpx;
-    margin-bottom: 20rpx;
+    margin-bottom: 15rpx;
 }
 
 .chat-button-hover-class {
