修改状态错位导致的业务逻辑状态异常

--- a/miniprogram/components/robotLoadding.wxml
+++ b/miniprogram/components/robotLoadding.wxml
@@ -1,5 +1,5 @@
 <!--components/buttonwave.wxml-->
-<view style="background-color: rgba(0, 0, 0, 0.3); width: max-content; height: max-content; border-radius: 10px; display: flex; flex-direction: column; justify-content: center; align-items: center;">
+<view style="background-color: rgba(255, 255, 255, 0.6); width: max-content; height: max-content; border-radius: 10px; display: flex; flex-direction: column; justify-content: center; align-items: center;">
     <canvas id="loadding-canvas" type="2d" style="width: 238px; height: 196px;"></canvas>
-    <text style="color: white; transform: translateY(-50%);">正在思考...</text>
+    <text style="color: rgb(0, 0, 0); transform: translateY(-50%);">正在思考...</text>
 </view>
