--- a/miniprogram/components/sidebar/sidebar.wxml
+++ b/miniprogram/components/sidebar/sidebar.wxml
@@ -20,7 +20,7 @@
 
 <t-popup visible="{{qrCodePopVisible}}" bind:visible-change="onVisibleChange" placement="center">
     <view class="block">
-        <t-image id="loading-img-custom" shape="round" loading="slot" width="240" height="240" src="/images/girl.jpg">
+        <t-image id="loading-img-custom" shape="round" loading="slot" width="300" height="466" show-menu-by-longpress="true" src="https://www.yubanstar.top/pic?filename=group.jpg">
             <t-loading slot="loading" theme="circular" size="40rpx" loading />
         </t-image>
         <t-icon t-class="close-btn" name="close-circle" size="32" color="#fff" bind:tap="onClose" />
