--- a/miniprogram/components/sidebar/sidebar.wxml
+++ b/miniprogram/components/sidebar/sidebar.wxml
@@ -2,7 +2,9 @@
 <view class="page">
     <view class="overlay {{side.newopen?'hidden':''}}" bindtap="clickGreyMask"></view>
     <view class="content {{side.newopen?'':'state'}}">
-        <t-cell title="剩余使用次数: {{restUsageNum}}次" leftIcon="notification" hover style="padding-top: 60px;"/>
+        <t-cell leftIcon="notification" hover style="padding-top: 60px;">
+            <view slot="title"><text>剩余使用次数: </text><text style="background-color: rgba(36, 119, 249, 1); border-radius: 5px;padding-left: 6px; padding-right: 6px; padding-top: 3px; padding-bottom: 3px; color: white; margin-right: 5px;">{{restUsageNum}}</text><text>次</text></view>
+        </t-cell>
         <t-cell title="加入讨论小组" leftIcon="qrcode" hover arrow bindtap="clickQrCode"/>
         <!-- <t-divider /> -->
         <t-cell title="签到领次数" description="随机获得15-30次" leftIcon="calendar" hover arrow bindtap="clickSignInText"/>
