--- a/miniprogram/components/textgroup/textgroup.wxml
+++ b/miniprogram/components/textgroup/textgroup.wxml
@@ -1,11 +1,13 @@
 <!--components/textgroup.wxml-->
+<t-progress percentage="{{percentage}}" ariaLabel="{{ percentage + '%' }}" wx:if="{{showProgess}}"/>
 <view class="text-group" hidden="{{!showTextGroup}}" style="margin-top: {{marginTop}};">
     <block wx:for="{{sentences}}" wx:key="index">
         <text class="text-item {{current_index === index?'highlight':' '}}" data-index="{{index}}" bindtap="onTap">{{item}}</text>
     </block>
 </view>
 <view class="translate-view" wx:if="{{showTranslateView}}">
-    <text class="translate-text">{{translation}}</text>
+    <t-loading theme="dots" size="80rpx" class="wrapper" wx:if="{{!loaddingSuccess}}"/>
+    <text class="translate-text" wx:if="{{loaddingSuccess}}">{{translation}}</text>
 </view>
 <!-- <mp-loading></mp-loading> -->
 <!-- <grammer-tree-group id="grammer-tree"></grammer-tree-group> -->
